# Vscode_Mingw_GDB_CMake_Clangd_Demo

./: .gitignore  CMakeLists.txt  README.md
includes/: c_math.h
src/: .clang-tidy  c_math.c  main.c
